--- a/ApiEasier.Frontend/documentation/components/PageNotFoundComponent.html
+++ b/ApiEasier.Frontend/documentation/components/PageNotFoundComponent.html
@@ -106,6 +106,10 @@
                 role="tab" id="templateData-tab" data-bs-toggle="tab" data-link="template">Template</a>
         </li>
         <li class="nav-item">
+            <a href="#styleData" class="nav-link"
+                role="tab" id="styleData-tab" data-bs-toggle="tab" data-link="style">Styles</a>
+        </li>
+        <li class="nav-item">
             <a href="#tree" class="nav-link"
                 role="tab" id="tree-tab" data-bs-toggle="tab" data-link="dom-tree">DOM Tree</a>
         </li>
@@ -120,6 +124,18 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Компонент PageNotFoundComponent отвечает за отображение страницы &quot;Страница не найдена&quot; (404).
+Он предоставляет пользователю информацию о том, что запрашиваемая страница не существует.</p>
+<p>Этот компонент используется для отображения сообщения об ошибке 404, когда пользователь пытается получить доступ к несуществующей странице.
+Он может быть настроен для отображения дополнительной информации или предложений по навигации.</p>
+<b>Example :</b><div><pre class="line-numbers"><code class="language-html">HTML:
+```html
+&lt;app-page-not-found&gt;&lt;/app-page-not-found&gt;</code></pre></div>
+    </p>
 
 
 
@@ -155,6 +171,10 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-3">styleUrls</td>
+                <td class="col-md-9"><code>./page-not-found.component.css</code></td>
+            </tr>
 
 
 
@@ -165,10 +185,6 @@
 
 
 
-            <tr>
-                <td class="col-md-3">styleUrl</td>
-                <td class="col-md-9"><code>./page-not-found.component.css</code></td>
-            </tr>
 
 
 
@@ -179,66 +195,6 @@
 </section>
 
 
-    <section data-compodoc="block-constructor">
-    <h3 id="constructor">Constructor</h3>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-<code>constructor(cd: ChangeDetectorRef, route: ActivatedRoute)</code>
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/data/pages/page-not-found/page-not-found.component.ts:18</a></div>
-                            </td>
-                        </tr>
-
-                <tr>
-                    <td class="col-md-4">
-                            <div>
-                                    <b>Parameters :</b>
-                                    <table class="params">
-                                        <thead>
-                                            <tr>
-                                                <td>Name</td>
-                                                    <td>Type</td>
-                                                <td>Optional</td>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                                <tr>
-                                                        <td>cd</td>
-                                                  
-                                                        <td>
-                                                                    <code>ChangeDetectorRef</code>
-                                                        </td>
-                                                  
-                                                    <td>
-                                                            No
-                                                    </td>
-                                                    
-                                                </tr>
-                                                <tr>
-                                                        <td>route</td>
-                                                  
-                                                        <td>
-                                                                    <code>ActivatedRoute</code>
-                                                        </td>
-                                                  
-                                                    <td>
-                                                            No
-                                                    </td>
-                                                    
-                                                </tr>
-                                        </tbody>
-                                    </table>
-                            </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-</section>
 
 
 
@@ -251,28 +207,34 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { CommonModule } from &#x27;@angular/common&#x27;;
-import { ChangeDetectorRef, Component } from &#x27;@angular/core&#x27;;
-import { ActivatedRoute, RouterModule } from &#x27;@angular/router&#x27;;
-import { AlertDeleteComponent } from &quot;../../components/alert-delete/alert-delete.component&quot;;
-import { HeaderComponent } from &#x27;../../components/header/header.component&#x27;;
+import { Component } from &#x27;@angular/core&#x27;;
+import { RouterModule } from &#x27;@angular/router&#x27;;
 import { TuiButton } from &#x27;@taiga-ui/core&#x27;;
 
+/**
+ * Компонент PageNotFoundComponent отвечает за отображение страницы &quot;Страница не найдена&quot; (404).
+ * Он предоставляет пользователю информацию о том, что запрашиваемая страница не существует.
+ *
+ * @remarks
+ * Этот компонент используется для отображения сообщения об ошибке 404, когда пользователь пытается получить доступ к несуществующей странице.
+ * Он может быть настроен для отображения дополнительной информации или предложений по навигации.
+ *
+ * @example
+ * HTML:
+ * &#x60;&#x60;&#x60;html
+ * &lt;app-page-not-found&gt;&lt;/app-page-not-found&gt;
+ */
 @Component({
   selector: &#x27;app-page-not-found&#x27;,
   imports: [
     CommonModule,
-     TuiButton,
-     RouterModule
-],
+    TuiButton,
+    RouterModule,
+  ],
   templateUrl: &#x27;./page-not-found.component.html&#x27;,
-  styleUrl: &#x27;./page-not-found.component.css&#x27;
+  styleUrls: [&#x27;./page-not-found.component.css&#x27;],
 })
 export class PageNotFoundComponent {
-
-constructor(
-   private cd: ChangeDetectorRef,
-    private route: ActivatedRoute,
-  ) {}
 }
 </code></pre>
     </div>
@@ -301,6 +263,68 @@ constructor(
 &lt;/html&gt;</code></pre>
     </div>
 
+    <div class="tab-pane fade " id="styleData">
+                <p class="comment">
+                    <code>./page-not-found.component.css</code>
+                </p>
+                <pre class="line-numbers"><code class="language-scss">html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container {
+    text-align: center;
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    width: 100%;
+    background-color: #fff; /* Фон контейнера */
+}
+
+/* Стили для заголовков */
+h1 {
+    color: #333;
+    font-size: 2em;
+    margin: 15px 0;
+}
+
+/* Стили для изображения */
+img {
+    width: 300px;
+    height: 300px;
+    border-radius: 15px;
+    margin: 25px 0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Стили для кнопки */
+button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 15px 30px;
+    font-size: 1.2em;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+}</code></pre>
+    </div>
 
     <div class="tab-pane fade " id="tree">
         <div id="tree-container"></div>
